@@ -55,11 +55,12 @@ information on development:
 changelog of snapshot <21w27a> released on <?> targeting <1.17.1?>
     JVM:
         - a lot smaller stuff, fixes, more integration work
+        - decoupled JVM from main code into seperate repository
 
     Mod Loader:
-        - rewritten initial discovery system
+        - rewritten initial discovery system for mods, making it more extendable
         - mods can now provide mod loaders, finally (before, mods where to late to do stuff)
-        - mod loading order is no longer stable without dependencies
+        - mod loading order is no longer stable (inside the dependencies)
 
 
 changelog of snapshot 21w23a released on 9.6.2021 targeting 1.17
